opam-version: "2.0"
synopsis: "The compiler for the space programming language"
version: "1.0.0"
maintainer: "krissemicolon@gmail.com"
authors: ["krissemicolon"]
homepage: "https://space-lang.github.io"
bug-reports: "https://github.com/space-lang/space/issues"
dev-repo: "git+https://github.com/space-lang/space.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "dune" {>= "2.0.0"}
  "core" {= "v0.12.4"}
  "qcheck"  {= "0.12"}
  "qcheck-alcotest" {= "0.12"}
  "alcotest" {= "0.8.5"}
  "odoc" {= "1.4.2"}
  "ocamlformat" {="0.12"}
  "bisect_ppx" { = "2.2.0"}
  "ppx_tools_versioned" { = "5.3.0"}
  "ppx_jane"{= "v0.12.0"}
  "menhir"{= "20190924"}
  "fmt" { ="0.8.8"}
  "ppx_deriving_protobuf" {= "2.7"}
]