;(executable
; (name main)
; (modules main)
; (libraries core fmt compiler_program_ir)
; (preprocess (pps ppx_jane bisect_ppx --conditional))
; (lint (pps ppx_js_style -annotated-ignores -styler -pretty -dated-deprecation))
;)

;(library
; (public_name space)
; (name compile_program_ir)
; (modules compile_program_ir)
; (libraries core fmnt parsing typing ir_gen)
; (preprocess (pps ppx_jane bisect_ppx --conditional))
; (lint (pps ppx_js_style -annotated-ignores -styler -pretty -dated-deprecation))
;)